--- a/tracker-attached-another-account.html
+++ b/tracker-attached-another-account.html
@@ -1,53 +1,74 @@
 <html>
-	<head>
-		<title>Fitcoin [Tracker] Attached to Another Account</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/css/main.css"/>
-		<noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Header -->
-					<header id="header">
-						
-							<img src="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/images/fitcoin.jpg">
-						
-						<div class="content">
-							<div class="inner">
-								<h1>[Username] [Tracker] Connected to another Account</h1>
-								<p>Welcome to Burning, Gaining and Earning with Fitcoin! <br /> You're [Tracker] is connected to another account on the Fitcoin Network</p>
-								<a href="http://fitcoinapp.com" class="button">Home</a>
-							</div>
-									<ul class="icons">
-									<li><a href="https://www.instagram.com/fitcoin.app/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://discord.com/channels/@me/938145377247449171/941071039465652284" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
-								</ul>
-						</div>
-					</header>
-
-				<!-- Main -->
-					<div id="main">
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-					</footer>
-
-			</div>
-
-		<!-- BG -->
-			<div id="bg"></div>
-
-		<!-- Scripts -->
-			<script src="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/js/jquery.min.js"></script>
-			<script src="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/js/browser.min.js"></script>
-			<script src="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/js/breakpoints.min.js"></script>
-			<script src="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/js/util.js"></script>
-			<script src="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/js/main.js"></script>
-
-	</body>
+    <head>
+        <title>
+            Fitcoin [Tracker] Attached to Another Account
+        </title>
+        <meta charset="utf-8"/>
+        <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport"/>
+        <link href="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/css/main.css" rel="stylesheet"/>
+        <noscript>
+            <link href="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/css/noscript.css" rel="stylesheet"/>
+        </noscript>
+    </head>
+    <body class="is-preload">
+        <!-- Wrapper -->
+        <div id="wrapper">
+            <!-- Header -->
+            <header id="header">
+                <img src="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/images/fitcoin.jpg">
+                    <div class="content">
+                        <div class="inner">
+                            <h1>
+                                [Username] [Tracker] Connected to another Account
+                            </h1>
+                            <p>
+                                Welcome to Burning, Gaining and Earning with Fitcoin!
+                                <br/>
+                                You're [Tracker] is connected to another account on the Fitcoin Network
+                            </p>
+                            <a class="button" href="http://fitcoinapp.com">
+                                Home
+                            </a>
+                        </div>
+                        <ul class="icons">
+                            <li>
+                                <a class="icon brands fa-instagram" href="https://www.instagram.com/fitcoin.app/">
+                                    <span class="label">
+                                        Instagram
+                                    </span>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="icon brands fa-discord" href="https://discord.com/channels/@me/938145377247449171/941071039465652284">
+                                    <span class="label">
+                                        Discord
+                                    </span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </img>
+            </header>
+            <!-- Main -->
+            <div id="main">
+            </div>
+            <!-- Footer -->
+            <footer id="footer">
+            </footer>
+        </div>
+        <!-- BG -->
+        <div id="bg">
+        </div>
+        <!-- Scripts -->
+        <script src="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/js/jquery.min.js">
+        </script>
+        <script src="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/js/browser.min.js">
+        </script>
+        <script src="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/js/breakpoints.min.js">
+        </script>
+        <script src="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/js/util.js">
+        </script>
+        <script src="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/js/main.js">
+        </script>
+    </body>
 </html>
