changed home button url

--- a/email-verification.html
+++ b/email-verification.html
@@ -28,7 +28,7 @@
                                 <br/>
                                 You're Email is not verified on the Fitcoin Network
                             </p>
-                            <a class="button" href="http://fitcoinapp.com">
+                            <a class="button" href="https://fitcoinbeta.com">
                                 Home
                             </a>
                         </div>
