--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 <br/>
                                 You're [Tracker] is connected to the Fitcoin Network
                             </p>
-                            <a class="button" href="http://fitcoinapp.com">
+                            <a class="button" href="https://fitcoinbeta.com">
                                 Home
                             </a>
                         </div>
