--- a/invalid.html
+++ b/invalid.html
@@ -28,7 +28,7 @@
                                 <br/>
                                 Click below and let's go for round 2!
                             </p>
-                            <a class="button" href="http://fitcoinapp.com">
+                            <a class="button" href="https://fitcoinbeta.com">
                                 Home
                             </a>
                         </div>
