--- a/tracker-attached-another-account.html
+++ b/tracker-attached-another-account.html
@@ -26,7 +26,7 @@
                                 <br/>
                                 You're [Tracker] is connected to another account on the Fitcoin Network
                             </p>
-                            <a class="button" href="http://fitcoinapp.com">
+                            <a class="button" href="https://fitcoinbeta.com">
                                 Home
                             </a>
                         </div>
