--- a/unlink_tracker.html
+++ b/unlink_tracker.html
@@ -26,10 +26,9 @@
                                 <br/>
                                 You're [Tracker] is has been unlinked to the Fitcoin Network
                             </p>
-                            <a class="button" href="http://fitcoinapp.com">
+                            <a class="button" href="https://fitcoinbeta.com">
                                 Home
                             </a>
-                            x
                         </div>
                         <ul class="icons">
                             <li>
