--- a/discordInvaild.html
+++ b/discordInvaild.html
@@ -1,14 +1,16 @@
 <html>
     <head>
         <title>
-            Fitcoin [Tracker] Unlinked
+            Fitcoin [Tracker] Connected
         </title>
-        <meta charset="utf-8"/>
-        <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport"/>
-        <link href="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/css/main.css" rel="stylesheet"/>
-        <noscript>
-            <link href="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/css/noscript.css" rel="stylesheet"/>
-        </noscript>
+        <link href="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/images/favicon.ico" rel="icon" type="image/x-icon">
+            <meta charset="utf-8"/>
+            <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport"/>
+            <link href="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/css/main.css" rel="stylesheet"/>
+            <noscript>
+                <link href="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/css/noscript.css" rel="stylesheet"/>
+            </noscript>
+        </link>
     </head>
     <body class="is-preload">
         <!-- Wrapper -->
@@ -19,12 +21,12 @@
                     <div class="content">
                         <div class="inner">
                             <h1>
-                                [Username] [Tracker] Unlinked
+                                [Username]'s [Tracker] Connected
                             </h1>
                             <p>
-                                We hope to see you back shortly!
+                                Fitcoin Discord!
                                 <br/>
-                                You're [Tracker] is has been unlinked to the Fitcoin Network
+                                Something went wrong with the Discord Sign up, Please try again
                             </p>
                             <a class="button" href="https://fitcoinbeta.com">
                                 Home
