discord oauth2 connection pages

--- a/discord.html
+++ b/discord.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Fitcoin [Tracker] Connected
+            Fitcoin Discord Connected
         </title>
         <link href="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/images/favicon.ico" rel="icon" type="image/x-icon">
             <meta charset="utf-8"/>
