Discord connection pages

--- a/discord.html
+++ b/discord.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Fitcoin Discord Connected
+            Fitcoin Discord Bonded
         </title>
         <link href="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/images/favicon.ico" rel="icon" type="image/x-icon">
             <meta charset="utf-8"/>
@@ -21,12 +21,15 @@
                     <div class="content">
                         <div class="inner">
                             <h1>
-                                [Username]'s Discord Connected
+                                [Username]'s Discord Bond
                             </h1>
+                            <br/>
+                            <h2>
+                                Discord has been bonded to the Fitcoin Network
+                            </h2>
                             <p>
-                                Welcome to Fitcoin's Dicord Features!
+                                Enjoy our exclusive Fitcoin Discord Features!
                                 <br/>
-                                You're Discord is connected to the Fitcoin Network
                             </p>
                             <a class="button" href="https://fitcoinbeta.com">
                                 Home
