--- a/discordInvaild.html
+++ b/discordInvaild.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Fitcoin Discord Connected
+            Fitcoin Discord Bond Failed
         </title>
         <link href="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/images/favicon.ico" rel="icon" type="image/x-icon">
             <meta charset="utf-8"/>
@@ -21,13 +21,13 @@
                     <div class="content">
                         <div class="inner">
                             <h1>
-                                [Username]'s [Tracker] Connected
+                                Discord Bond Issue
                             </h1>
+                            <br/>
                             <p>
-                                Fitcoin Discord!
-                                <br/>
-                                Something went wrong with the Discord Sign up, Please try again
+                                <br/>Please try again
                             </p>
+                                <br/>
                             <a class="button" href="https://fitcoinbeta.com">
                                 Home
                             </a>
