--- a/email-verification.html
+++ b/email-verification.html
@@ -17,7 +17,7 @@
         <div id="wrapper">
             <!-- Header -->
             <header id="header">
-                <img src="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/images/fitcoin.jpg">
+                <img src="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/images/fitcoin.png">
                     <div class="content">
                         <div class="inner">
                             <h1>
