--- a/tracker-attached-another-account.html
+++ b/tracker-attached-another-account.html
@@ -15,7 +15,7 @@
         <div id="wrapper">
             <!-- Header -->
             <header id="header">
-                <img src="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/images/fitcoin.jpg">
+                <img src="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/images/fitcoin.png">
                     <div class="content">
                         <div class="inner">
                             <h1>
