fitcoin logo update

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/images/favicon.ico" rel="icon" type="image/x-icon">
             <meta charset="utf-8"/>
             <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport"/>
-            <link href="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/css/main.css" rel="stylesheet"/>
+            <link href="./assets/css/main.css" rel="stylesheet"/>
             <noscript>
                 <link href="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/css/noscript.css" rel="stylesheet"/>
             </noscript>
