--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/images/favicon.ico" rel="icon" type="image/x-icon">
             <meta charset="utf-8"/>
             <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport"/>
-            <link href="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/css/main.css" rel="stylesheet"/>
+            <link href="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/css/main-new.css" rel="stylesheet"/>
             <noscript>
                 <link href="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/css/noscript.css" rel="stylesheet"/>
             </noscript>
@@ -59,8 +59,9 @@
             </footer>
         </div>
         <!-- BG -->
-        <div id="bg">
-        </div>
+        <video autoplay loop muted poster="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/images/bg.jpg" id="bg">
+        <source src="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/assets/video/tracker2.webm" type="video/webm" >
+        </video>
         <!-- Scripts -->
         <script src="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/js/jquery.min.js">
         </script>
