--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
             </noscript>
         </link>
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-S3ND4G4F1V">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S3ND4G4F1V');
+    </script>
     <body class="is-preload">
         <!-- Wrapper -->
         <div id="wrapper">
@@ -59,8 +69,9 @@
             </footer>
         </div>
         <!-- BG -->
-        <video autoplay loop muted poster="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/images/bg.jpg" id="bg">
-        <source src="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/assets/video/tracker2.webm" type="video/webm" >
+        <video autoplay="" id="bg" loop="" muted="" poster="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/images/bg.jpg">
+            <source src="https://raw.githubusercontent.com/Fitcoin-Beta/api-connection-pages/main/assets/video/tracker2.webm" type="video/webm">
+            </source>
         </video>
         <!-- Scripts -->
         <script src="https://cdn.jsdelivr.net/gh/Fitcoin-Beta/api-connection-pages@main/assets/js/jquery.min.js">
